--- a/package.json
+++ b/package.json
@@ -10,10 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@capacitor/core": "^7.4.3",
+    "@capacitor/ios": "^7.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "web-push": "^3.6.7"
+    "web-push": "^3.6.7",
+    "lowdb": "^2.1.0"
+  },
+  "devDependencies": {
+    "@capacitor/cli": "^7.4.3"
   }
 }
